# weegrad

./: CMakeLists.txt  README.MD  main.cpp  nn.cpp  nn.h
linearalg/: Matrix.cpp  Matrix.h  Ops.cpp  Ops.h  matrix.cpp  matrix.h  ops.cpp  ops.h
net/: ActivationLayer.cpp  ActivationLayer.h  Dense.cpp  Dense.h  Layer.cpp  Layer.h  LayerType.cpp  LayerType.h  Net.cpp  Net.h  ReLU.cpp  ReLU.h  dense.cpp  dense.h  nn.cpp  nn.h
net/layers/: Dense.cpp  Dense.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Tanh.cpp  Tanh.h
tests/: MNIST.cpp  MNIST.h  tests.cpp  tests.h
